--- a/public/index.css
+++ b/public/index.css
@@ -17,12 +17,13 @@ h1 {
 }
 form {
     display: flex;
-    justify-content: space-between;
     margin-bottom: 20px;
+    text-align: space-between;
 }
 input {
-    width: 70%;
+    width: 85%;
     padding: 8px;
+    margin-right: 2%;
 }
 button {
     padding: 8px 12px;
@@ -32,8 +33,16 @@ button {
     border-radius: 4px;
     cursor: pointer;
 }
-button:hover {
-    background: #0056b3;
+button.mark {
+    background: #007bff;
+    align-items: right;
+}
+/* Botón de borrar (rojo) */
+button.delete {
+    background: #dc3545;
+}
+button.delete:hover {
+    background: #a71d2a;
 }
 ul {
     list-style: none;
@@ -42,7 +51,11 @@ ul {
 li {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 10px;
+}
+span{
+    padding: 10px;
 }
 .completed span {
     text-decoration: line-through;
