--- a/public/login.css
+++ b/public/login.css
@@ -9,7 +9,7 @@ body {
   height: 100vh;
 }
 
-.login-container, .success-container {
+.login-container{
   background: white;
   padding: 20px;
   border-radius: 5px;
@@ -23,7 +23,7 @@ label {
 }
 
 input {
-  width: 100%;
+  width: 80%;
   padding: 10px;
   margin-bottom: 20px;
   border: 1px solid #ccc;
